--- a/strain/analysis/LIG_linen_a/simulation/cluster_A/energyA.conf
+++ b/strain/analysis/LIG_linen_a/simulation/cluster_A/energyA.conf
@@ -4,7 +4,7 @@
       "Complex" : {
          "files" : [
             {
-               "path": "/mnt/c/Users/Ignasi/Desktop/Ignasi/Estudis/PhD/code/code_pelissimo/results/LIG_linen/simulation/cluster_A/cluster_A.pdb"
+               "path": "/mnt/c/Users/Ignasi/Desktop/Ignasi/Estudis/PhD/code/code_pelissimo/strain/analysis/LIG_linen_a/simulation/cluster_A/cluster_A.pdb"
             }
          ]
       },
@@ -16,8 +16,19 @@
       }
    },
    "commands" : [
-      {
-       "commandType":"energyComputation"
-      }
-   ]
+             {
+                 "commandType": "minimization",
+                 "Minimizer":
+                 {
+                     "algorithm": "TruncatedNewton",
+                     "parameters":
+                     {
+                         "MinimumRMS": 0.05
+                     }
+                 }
+             },
+             {
+                 "commandType":"energyComputation"
+             }
+         ]
 }
