Folder generated with linen_a of the linen_con results

--- a/strain/conformer/LIG_linen_a/simulation/cluster_A/energyA.conf
+++ b/strain/conformer/LIG_linen_a/simulation/cluster_A/energyA.conf
@@ -16,8 +16,19 @@
       }
    },
    "commands" : [
-      {
-       "commandType":"energyComputation"
-      }
-   ]
+             {
+                 "commandType": "minimization",
+                 "Minimizer":
+                 {
+                     "algorithm": "TruncatedNewton",
+                     "parameters":
+                     {
+                         "MinimumRMS": 0.05
+                     }
+                 }
+             },
+             {
+                 "commandType":"energyComputation"
+             }
+         ]
 }
