--- a/strain/crystal/LIG_linen_cry/pele.conf
+++ b/strain/crystal/LIG_linen_cry/pele.conf
@@ -11,7 +11,7 @@
     "ForceField": "OPLS2005",
     "Solvent": {
       "ionicStrength": 0.15,
-      "solventType": "VDGBNP",
+      "solventType": "OBC",
       "useDebyeLength": true
     }
   },
