Changes in files

--- a/strain/LIG_linen_cry/pele.conf
+++ b/strain/LIG_linen_cry/pele.conf
@@ -4,14 +4,14 @@
     "Complex": {
       "files": [
         {
-          "path": "/mnt/c/Users/Ignasi/Desktop/Ignasi/Estudis/PhD/code/code_pelissimo/strain/crystal/LIG_linen_cry/ligand.pdb"
+          "path": "/mnt/c/Users/Ignasi/Desktop/Ignasi/Estudis/PhD/code/code_pelissimo/strain/LIG_linen_cry/ligand.pdb"
         }
       ]
     },
     "ForceField": "OPLS2005",
     "Solvent": {
       "ionicStrength": 0.15,
-      "solventType": "OBC",
+      "solventType": "VDGBNP",
       "useDebyeLength": true
     }
   },
@@ -44,7 +44,7 @@
         "sideChainPredictionRegionRadius": 6,
         "activateProximityDetection": true,
         "temperature": 1500,
-        "numberOfPeleSteps": 100
+        "numberOfPeleSteps": 1000
       },
 
       "constraints":[
@@ -67,28 +67,9 @@
         }
       },
       "ANM": {
-        "algorithm": "CARTESIANS",
-        "nodes": {
-          "atoms": {
-            "names": [
-              "_C1_"
-            ]
-          }
+        "algorithm": "NULL"
         },
-        "ANMMinimizer": {
-          "algorithm": "TruncatedNewton",
-          "parameters": {
-            "MaximumMinimizationIterations": 1,
-            "MaximumNewtonIterations": 25,
-            "MinimumRMS": 0.2,
-            "alphaUpdated": false,
-            "nonBondingListUpdatedEachMinStep": false
-          }
-        },
-        "parameters": {
-          "modesChangeFrequency": 0
-        }
-      },
+
       "Minimizer": {
         "algorithm": "TruncatedNewton",
         "parameters": {
